--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <section class="teamwork">
             <div class="container teamwork__content">
                 <div class="teamwork__info">
-                    <div class="container teamwork__info-content">
+                    <div class="container git">
                         <a href="#!" class="teamwork__info-link ">Our Teamwork </a>
                         <h2 class="teamwork__info-title">We Believe Success
                             Lies On Teamwork</h2>
@@ -373,8 +373,7 @@
                             fill="#C1C1C1" />
                     </svg>
                 </div>
-                <div class="brands__card" data-speed="1200">
-                    <img src="img/brands-icon.svg" alt="" class="brand">
+                <div class="brands__card" data-speed="1200"><img src="img/brands-icon.svg" alt="" >
                 </div>
             </div>
         </section>
